实现视频下载与合并

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/icon.icns"
+      "icon": "build/icons/icon.icns" 
     },
     "win": {
       "icon": "build/icons/icon.ico"
@@ -61,6 +61,8 @@
 
   },
   "devDependencies": {
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "10.0.0",
     "ajv": "^6.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -76,10 +78,10 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
-    "electron-debug": "^1.5.0",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-builder": "^20.19.2",
+    "electron": "^16.0.5",
+    "electron-debug": "^3.2.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-builder": "^22.14.5",
     "mini-css-extract-plugin": "0.4.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
