edit: 修改路径问题

--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
 
   },
   "devDependencies": {
+    "cheerio": "1.0.0-rc.10",
+    "electron-store": "^8.0.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "10.0.0",
     "ajv": "^6.5.0",
