--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
   },
   "devDependencies": {
     "cheerio": "1.0.0-rc.10",
-    "electron-store": "^8.0.1",
+    "electron-store": "^7.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "10.0.0",
+    "jsesc": "^3.0.2",
     "ajv": "^6.5.0",
+    "babylon": "^6.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -89,8 +91,8 @@
     "html-webpack-plugin": "^3.2.0",
     "listr": "^0.14.3",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
